--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -340,7 +340,7 @@ ul.c3{
   top: 0;
   width: 130%;
   height: 95%;
-  background: linear-gradient(to right, rgba(30, 86, 60, 0.8), rgba(30, 67, 86, 0.6)), url("../img/bambu.jpg") center top no-repeat;
+  background: linear-gradient(to right, rgba(30, 86, 60, 0.8), rgba(30, 67, 86, 0.6)), url("../img/Logo.png") center top no-repeat;
   z-index: 0;
   border-radius: 0 0 50% 50%;
   transform: translateX(-50%) rotate(0deg);
